deploy/kubernetes/overlays/current-host/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  labels:
    app.kubernetes.io/name: api-gateway
spec:
  ingressClassName: traefik
  tls:
    - secretName: noebs-tls
      hosts:
        - api.noebs.sd
        - dsa.adonese.sd
  rules:
    - host: api.noebs.sd
      http:
        paths:
          - path: /generate_api_key
            pathType: Exact
            backend:
              service:
                name: identity-auth
                port:
                  name: http
          - path: /consumer/register
            pathType: Exact
            backend:
              service:
                name: identity-auth
                port:
                  name: http
          - path: /consumer/register_with_card
            pathType: Exact
            backend:
              service:
                name: identity-auth
                port:
                  name: http
          - path: /consumer/login
            pathType: Exact
            backend:
              service:
                name: identity-auth
                port:
                  name: http
          - path: /consumer/refresh
            pathType: Exact
            backend:
              service:
                name: identity-auth
                port:
                  name: http
          - path: /consumer/otp
            pathType: Prefix
            backend:
              service:
                name: identity-auth
                port:
                  name: http
          - path: /consumer/auth
            pathType: Prefix
            backend:
              service:
                name: identity-auth
                port:
                  name: http
          - path: /consumer/user
            pathType: Prefix
            backend:
              service:
                name: identity-auth
                port:
                  name: http
          - path: /consumer/change_password
            pathType: Exact
            backend:
              service:
                name: identity-auth
                port:
                  name: http
          - path: /consumer/check_user
            pathType: Exact
            backend:
              service:
                name: identity-auth
                port:
                  name: http
          - path: /consumer/kyc
            pathType: Exact
            backend:
              service:
                name: identity-auth
                port:
                  name: http
          - path: /consumer/card_info
            pathType: Exact
            backend:
              service:
                name: card-vault
                port:
                  name: http
          - path: /consumer/pan_from_mobile
            pathType: Exact
            backend:
              service:
                name: card-vault
                port:
                  name: http
          - path: /consumer/cards/new
            pathType: Exact
            backend:
              service:
                name: card-vault
                port:
                  name: http
          - path: /consumer/cards/complete
            pathType: Exact
            backend:
              service:
                name: card-vault
                port:
                  name: http
          - path: /consumer/nec2name
            pathType: Exact
            backend:
              service:
                name: card-vault
                port:
                  name: http
          - path: /consumer/get_cards
            pathType: Exact
            backend:
              service:
                name: card-vault
                port:
                  name: http
          - path: /consumer/add_card
            pathType: Exact
            backend:
              service:
                name: card-vault
                port:
                  name: http
          - path: /consumer/edit_card
            pathType: Exact
            backend:
              service:
                name: card-vault
                port:
                  name: http
          - path: /consumer/delete_card
            pathType: Exact
            backend:
              service:
                name: card-vault
                port:
                  name: http
          - path: /consumer/cards/set_main
            pathType: Exact
            backend:
              service:
                name: card-vault
                port:
                  name: http
          - path: /consumer/users/cards
            pathType: Exact
            backend:
              service:
                name: card-vault
                port:
                  name: http
          - path: /consumer/mobile2pan
            pathType: Exact
            backend:
              service:
                name: card-vault
                port:
                  name: http
          - path: /consumer/payment_token
            pathType: Exact
            backend:
              service:
                name: card-vault
                port:
                  name: http
          - path: /consumer/payment_request
            pathType: Exact
            backend:
              service:
                name: card-vault
                port:
                  name: http
          - path: /consumer/payment_token/quick_pay
            pathType: Exact
            backend:
              service:
                name: card-vault
                port:
                  name: http
          - path: /psp/webhooks
            pathType: Prefix
            backend:
              service:
                name: psp-webhook
                port:
                  name: http
          - path: /ws
            pathType: Exact
            backend:
              service:
                name: notification-chat
                port:
                  name: http
          - path: /consumer/notifications
            pathType: Exact
            backend:
              service:
                name: notification-chat
                port:
                  name: http
          - path: /consumer/submit_contacts
            pathType: Exact
            backend:
              service:
                name: notification-chat
                port:
                  name: http
          - path: /dashboard
            pathType: Prefix
            backend:
              service:
                name: admin-reporting
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  name: http
    - host: dsa.adonese.sd
      http:
        paths:
          - path: /generate_api_key
            pathType: Exact
            backend:
              service:
                name: identity-auth
                port:
                  name: http
          - path: /consumer/register
            pathType: Exact
            backend:
              service:
                name: identity-auth
                port:
                  name: http
          - path: /consumer/register_with_card
            pathType: Exact
            backend:
              service:
                name: identity-auth
                port:
                  name: http
          - path: /consumer/login
            pathType: Exact
            backend:
              service:
                name: identity-auth
                port:
                  name: http
          - path: /consumer/refresh
            pathType: Exact
            backend:
              service:
                name: identity-auth
                port:
                  name: http
          - path: /consumer/otp
            pathType: Prefix
            backend:
              service:
                name: identity-auth
                port:
                  name: http
          - path: /consumer/auth
            pathType: Prefix
            backend:
              service:
                name: identity-auth
                port:
                  name: http
          - path: /consumer/user
            pathType: Prefix
            backend:
              service:
                name: identity-auth
                port:
                  name: http
          - path: /consumer/change_password
            pathType: Exact
            backend:
              service:
                name: identity-auth
                port:
                  name: http
          - path: /consumer/check_user
            pathType: Exact
            backend:
              service:
                name: identity-auth
                port:
                  name: http
          - path: /consumer/kyc
            pathType: Exact
            backend:
              service:
                name: identity-auth
                port:
                  name: http
          - path: /consumer/card_info
            pathType: Exact
            backend:
              service:
                name: card-vault
                port:
                  name: http
          - path: /consumer/pan_from_mobile
            pathType: Exact
            backend:
              service:
                name: card-vault
                port:
                  name: http
          - path: /consumer/cards/new
            pathType: Exact
            backend:
              service:
                name: card-vault
                port:
                  name: http
          - path: /consumer/cards/complete
            pathType: Exact
            backend:
              service:
                name: card-vault
                port:
                  name: http
          - path: /consumer/nec2name
            pathType: Exact
            backend:
              service:
                name: card-vault
                port:
                  name: http
          - path: /consumer/get_cards
            pathType: Exact
            backend:
              service:
                name: card-vault
                port:
                  name: http
          - path: /consumer/add_card
            pathType: Exact
            backend:
              service:
                name: card-vault
                port:
                  name: http
          - path: /consumer/edit_card
            pathType: Exact
            backend:
              service:
                name: card-vault
                port:
                  name: http
          - path: /consumer/delete_card
            pathType: Exact
            backend:
              service:
                name: card-vault
                port:
                  name: http
          - path: /consumer/cards/set_main
            pathType: Exact
            backend:
              service:
                name: card-vault
                port:
                  name: http
          - path: /consumer/users/cards
            pathType: Exact
            backend:
              service:
                name: card-vault
                port:
                  name: http
          - path: /consumer/mobile2pan
            pathType: Exact
            backend:
              service:
                name: card-vault
                port:
                  name: http
          - path: /consumer/payment_token
            pathType: Exact
            backend:
              service:
                name: card-vault
                port:
                  name: http
          - path: /consumer/payment_request
            pathType: Exact
            backend:
              service:
                name: card-vault
                port:
                  name: http
          - path: /consumer/payment_token/quick_pay
            pathType: Exact
            backend:
              service:
                name: card-vault
                port:
                  name: http
          - path: /psp/webhooks
            pathType: Prefix
            backend:
              service:
                name: psp-webhook
                port:
                  name: http
          - path: /ws
            pathType: Exact
            backend:
              service:
                name: notification-chat
                port:
                  name: http
          - path: /consumer/notifications
            pathType: Exact
            backend:
              service:
                name: notification-chat
                port:
                  name: http
          - path: /consumer/submit_contacts
            pathType: Exact
            backend:
              service:
                name: notification-chat
                port:
                  name: http
          - path: /dashboard
            pathType: Prefix
            backend:
              service:
                name: admin-reporting
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  name: http
